2003-03-06  Trey Matteson  <trey@apple.com>

	Refinement of routine that scans the DOM for field labels.
	We skip nodes that have no renderer, or are invisible.

        Reviewed by hyatt.

        * kwq/KWQKHTMLPart.mm:
        (KWQKHTMLPart::searchForLabelsBeforeElement): Added check.

2003-03-06  David Hyatt  <hyatt@apple.com>

	Fix for 3190580, tables should reset line-height and white-space
	in quirks mode.
	
        Reviewed by trey and john

        * khtml/css/quirks.css:

=== Safari-65 ===

2003-03-06  Darin Adler  <darin@apple.com>

        Reviewed by Don.

        - fixed 3177862 -- REGRESSION: can't upload widget at www.konfabulator.com

        * khtml/html/html_formimpl.cpp:
        (fixUpfromUnicode): Add a call to fixLineBreaks here (and move this down below that function).
        (HTMLFormElementImpl::formData): Remove the call to fixLineBreaks here, which was being used
        on non-text form data, like files being uploaded.

2003-03-05  Trey Matteson  <trey@apple.com>

	Autofill tweak.  In field names, replace all digits with spaces before matching
	labels against them.  This turns the digits to word boundaries, so field names like
	"address2" are matched by "address".

	As part of this, I abandoned an earlier attempt to map Qt regexp syntax to Darwin's.
	Now clients just have to use Darwin's.

        Reviewed by Maciej.

        * kwq/KWQKHTMLPart.mm:
        (regExpForLabels):
        (KWQKHTMLPart::matchLabelsAgainstElement):  Replace digits with space.
        * kwq/KWQRegExp.mm:
        (QRegExp::KWQRegExpPrivate::compile):  Don't try to support Qt syntax.

2003-03-05  Darin Adler  <darin@apple.com>

        Reviewed by John.

        - fixed 3189442 -- REGRESSION: utf-16-little-endian.html crashes making decoder

        * kwq/KWQCharsets.mm: (encodingNameHash): Re-add tolower call to hash function to
        match the equality function.

2003-03-04  Trey Matteson  <trey@apple.com>
